<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ministry Logbook</string>
    <string name="settings">Settings</string>
    <string name="news">News</string>
    <string name="bible_studies_short">Bible Studies</string>
    <string name="return_visits">Return Visits</string>
    <string name="video_showings">Video Showings</string>
    <string name="placements_long">Placements (Printed and Electronic)</string>
    <string name="hours">Hours</string>
    <string name="bible_studies_long">Number of different Bible studies conducted</string>
    <string name="comments">Comments</string>
    <string name="name">Name</string>
    <string name="month">Month</string>
    <string name="field_service_report">Field Service Report</string>
    <string name="share_field_service_report">Share Field Service Report</string>
    <string name="share_as_image">Share as image</string>
    <string name="share_as_text">Share as text</string>
    <string name="hours_short">hrs</string>
    <string name="minutes_short">min</string>
    <string name="ministry">Ministry</string>
    <string name="transfer">Transfer</string>
    <string name="create_entry">Create entry</string>
    <string name="january_short">Jan</string>
    <string name="february_short">Feb</string>
    <string name="march_short">Mar</string>
    <string name="april_short">Apr</string>
    <string name="may_short">May</string>
    <string name="june_short">Jun</string>
    <string name="july_short">Jul</string>
    <string name="august_short">Aug</string>
    <string name="september_short">Sep</string>
    <string name="october_short">Oct</string>
    <string name="november_short">Nov</string>
    <string name="december_short">Dec</string>
    <string name="current_month">Current month</string>
    <string name="role">Role</string>
    <string name="monthly_goal">Monthly goal</string>
    <string name="credits">Credits</string>
    <string name="weekly_progress">Week</string>
    <string name="field_service_this_month">Field service</string>
    <string name="no_name_set">No name set</string>
    <string name="no_goal_set">No goal set</string>
    <string name="personal_information">Personal Information</string>
    <string name="publisher">Publisher</string>
    <string name="auxiliary_pioneer">Auxiliary Pioneer</string>
    <string name="regular_pioneer">Regular Pioneer</string>
    <string name="special_pioneer">Special Pioneer</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="close">Close</string>
    <string name="set_name">Set name</string>
    <string name="printed_and_electronic">Printed and Electronic</string>
    <string name="save">Save</string>
    <string name="delete_entry">Delete entry</string>
    <string name="yes">Yes</string>
    <string name="delete_entry_description">Do you really want to delete this entry?</string>
    <string name="theocratic_school_or_class">Theocratic school or class</string>
    <string name="theocratic_assignment">Theocratic assignment</string>
    <string name="theocratic_school_or_class_comment">%1$s hours spent on theocratic assignments.</string>
    <string name="theocratic_assignment_comment">%1$s hours spent on a theocratic school or class.</string>
    <string name="appearance">Appearance</string>
    <string name="language">Language</string>
    <string name="design">Design</string>
    <string name="system_default">System default</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="manually_set_colon">Manually set:</string>
    <string name="set_goal">Set goal</string>
    <string name="reset_goal">Reset goal</string>
    <string name="last_month_time_remaining_title">Time remaining in last month</string>
    <string name="last_month_time_remaining_description">The last month has %1$d minutes left. Do you want to transfer it to this month?</string>
    <string name="this_month_time_remaining_title">Time remaining in this month</string>
    <string name="this_month_time_remaining_description">There are %1$d minutes left in this month. Would you like to transfer them over to next month?</string>
    <string name="transfer_to_next_month">Transfer to next month</string>
    <string name="name_colon">Name:</string>
    <string name="month_colon">Month:</string>
    <string name="history_entry_datetime_pattern">E, dd. MMMM</string>
    <string name="hours_short_unit">%1$s hrs</string>
    <string name="field_service_report_comments_placeholder">E.g., sickness, LDC, pioneer school etc.</string>
    <string name="comments_colon">Comments:</string>
    <string name="bible_studies_long_colon">Number of different Bible studies conducted:</string>
    <string name="return_visits_colon">Return Visits:</string>
    <string name="hours_colon">Hours:</string>
    <string name="video_showings_colon">Video Showings:</string>
    <string name="placements_long_colon">Placements (Printed and Electronic):</string>
    <string name="minutes">Minutes</string>
    <string name="share_with">Share with</string>
    <string name="to_transfer">Transfer</string>
    <string name="set_goal_error">Value must be a number greater than zero</string>
    <string name="undo_transfer_title">Undo transfer</string>
    <string name="undo_transfer_description">Are you sure you want to undo the transfer to the next month?</string>
    <string name="undo">Undo</string>
    <string name="min_transferred_to_next_month">%1$s min transferred to next month</string>
    <string name="min_transferred_from_last_month">%1$s min transferred from last month</string>
    <string name="version">Version %1$s (%2$s)</string>
    <string name="text">Text</string>
    <string name="image">Image</string>
    <string name="share">Share</string>
    <string name="date_in_future">Date is in the future</string>
    <string name="data">Data</string>
    <string name="legal">Legal</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="start_of_pioneering_month_pattern">MMMM yyyy</string>
    <string name="start_of_pioneering">Start of Pioneering</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="field_service_report_subject">Field Service Report for %1$s</string>
    <string name="report_share_file_name">Field_Service_Report_%1$s_%2$d</string>
    <string name="of">of</string>
    <string name="hours_value_short_unit">%1$d h</string>
    <string name="progress_of_yearly_goal">Progress of your yearly goal</string>
    <string name="behaviour">Behaviour</string>
    <string name="precision_mode">Precision Mode</string>
    <string name="precision_mode_description">Track time in single-minute increments</string>
    <string name="reminders">Reminders</string>
    <string name="send_report">Send report</string>
    <string name="send_report_reminder_description">Don\'t forget to send your report!</string>
    <string name="send_report_reminder_title">Report sending reminder</string>
    <string name="send_report_reminder_setting_description">Notifies you at the end of the month</string>
    <string name="backup">Backup</string>
    <string name="backup_file_name">MinistryLogbookBackup_%1$s-%2$s-%3$s</string>
    <string name="last_backup">Last backup</string>
    <string name="last_backup_value">Last backup: %1$s</string>
    <string name="no_backup_yet">No backup yet</string>
    <string name="create_backup_file">Create backup file</string>
    <string name="import_backup_file">Import backup file</string>
    <string name="restore_backup">Restore backup</string>
    <string name="whats_your_name">What\'s your name?</string>
    <string name="intro_name_description">We don\'t collect any data. Your name will be printed on your digital Field Service Reports.</string>
    <string name="intro_role_description">The selected role gives you some useful presets.</string>
    <string name="select_role">Select role</string>
    <string name="app_description">Ministry tracking for Jehovah\'s Witnesses</string>
    <string name="app_welcome">Welcome to\nMinistry Logbook</string>
    <string name="start_now">Start now</string>
    <string name="ready">Ready</string>
    <string name="reminders_description">Never forget to send your Field Service Report again.</string>
    <string name="setup_reminders_title">Lastly, do you want to get reminders?</string>
    <string name="intro_goal_title">Optionally, set a monthly goal</string>
    <string name="intro_goal_description">The app will help you reaching your goals.</string>
    <string name="file_type_not_supported">File type not supported</string>
    <string name="backup_is_invalid">Backup is invalid</string>
    <string name="import_backup_dialog_description">Importing the backup from %1$s will override all existing data. Do you want to proceed?</string>
    <string name="intro_role_title">Hello %1$s, please select your role</string>
    <string name="backup_older">The backup is older than your data!</string>
    <string name="no_date_set">No date set</string>
    <string name="preview">Preview</string>
    <string name="select_date">Select date</string>
    <string name="intro_pioneer_since_question">When did you start pioneering?</string>
    <string name="goal_reached">Goal reached!</string>
    <string name="time">Time</string>
    <string name="last_week">Last week</string>
    <string name="calendar_week_shorthand">CW %1$s</string>
    <string name="current_week">Current week</string>
    <string name="add_bible_study">Add bible study</string>
    <string name="check_box_form_of_ministry">Check the box if you shared in any form of the ministry during the month</string>
    <string name="check_box_form_of_ministry_colon">Check the box if you shared in any form of the ministry during the month:</string>
    <string name="hours_long">Hours (if auxiliary, regular, or special pioneer or field missionary)</string>
    <string name="hours_long_colon">Hours (if auxiliary, regular, or special pioneer or field missionary):</string>
    <string name="check_conducted_bible_studies">Check conducted bible studies</string>
    <string name="check_conducted_bible_studies_description">Make sure to check all the bible studies that have been conducted this month.</string>
    <string name="add_new_bible_study">Add new bible study</string>
    <string name="add">Add</string>
    <string name="delete_bible_study">Delete bible study</string>
    <string name="delete_bible_study_description">Are you sure you want to delete %1$s?</string>
    <string name="dismiss_changes_description">Are you sure you want to dismiss the changes you made?</string>
    <string name="dismiss_changes">Dismiss changes</string>
    <string name="dismiss_entry">Dismiss entry</string>
    <string name="dismiss_entry_description">Are you sure you want to dismiss the entry you started creating?</string>
    <string name="send_last_report_description">Don\'t forget to send your report of the last month.</string>
    <string name="send_last_report">Send your %1$s report!</string>
    <string name="use_system_colors">Use system colors</string>
    <string name="plus_time_from_last_month">+ %1$s from last month</string>
</resources>
