...
            modifier = Modifier
                .size(38.dp)
                .clip(RoundedCornerShape(100))
                .repeatingClickable(onClick = handleIncrease)
                .clickable(onClick = handleIncrease)
                .padding(4.dp),
            contentDescription = "Plus", // TODO: translation
            tint = MaterialTheme.colorScheme.onSurface
        )
    }
}

@SuppressLint("ModifierFactoryUnreferencedReceiver")
...
